--- a/index.html
+++ b/index.html
@@ -21,5 +21,7 @@
                 "Why yes I'd totally work at a slaughterhouse if I HAD LITERALLY ANY OTHER CHOICE" said no one EVER
             </li>
         </ul>
+
+        <p>They have played us for absolute fools</p>
     </main>
 </body>
