Add utterly deranged and use fluid pico css

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.fluid.classless.min.css" />
 </head>
 
 <body>
@@ -19,6 +19,9 @@
             </li>
             <li>
                 "Why yes I'd totally work at a slaughterhouse if I HAD LITERALLY ANY OTHER CHOICE" said no one EVER
+            </li>
+            <li>
+                "Our slaughterhouse is 100% HUMANE" statements dreamed up by the UTTERLY DERANGED
             </li>
         </ul>
 
