--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="en" data-theme="light">
 
 <head>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.classless.min.css" />
@@ -28,3 +29,5 @@
         <p>They have played us for absolute fools</p>
     </main>
 </body>
+
+</html>
