--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 
 <head>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.classless.min.css" />
+    <style>
+        :root {
+            --pico-font-size: 130%;
+        }
+    </style>
 </head>
 
 <body>
