Adjust line height

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <style>
         :root {
             --pico-font-size: 140%;
+            --pico-line-height: 1.8;
         }
     </style>
 </head>
